--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/ZerioDev/Music-bot.git",
   "description": "A complete code to download for a music bot. Using a module (discord-player).",
   "scripts": {
+    "dev": "node index.js",
     "start": "node index.js"
   },
   "dependencies": {
